[MAZE]: Add arguments for header and index in ASCII, and for json output.

--- a/examples/maze_example.ipynb
+++ b/examples/maze_example.ipynb
@@ -22,7 +22,7 @@
     "# Ensure project root is on sys.path for imports\n",
     "repo_root = Path('..').resolve()\n",
     "sys.path.insert(0, str(repo_root))\n",
-    "from src.squared_maze import generate_maze, astar, grid_to_ascii, save_images, find_valid_cell, make_unsolvable, make_multiple_solutions\n",
+    "from src.squared_maze import generate_maze, astar, grid_to_ascii, grid_to_json, save_images, find_valid_cell, make_unsolvable, make_multiple_solutions\n",
     "print('Imports OK')"
    ]
   },
@@ -34,14 +34,24 @@
    "outputs": [],
    "source": [
     "# Generate and solve a maze\n",
-    "rows, cols = 12, 20\n",
+    "rows, cols = 1, 2\n",
     "grid = generate_maze(rows, cols, seed=41)\n",
     "start = find_valid_cell(grid, seed=42)\n",
     "end = find_valid_cell(grid, exclude={start}, seed=99)\n",
     "path = astar(grid, start, end)\n",
     "print('Path found:', path is not None)\n",
     "print('ASCII representation:')\n",
-    "print(grid_to_ascii(grid, path, start, end, start_sym='@', end_sym='#', path_sym='*', walkable_sym='.'))"
+    "print(grid_to_ascii(grid, path, start, end, start_sym='@', end_sym='#', path_sym='*', walkable_sym='.', include_header=True, include_index=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c34a645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(grid_to_json(grid, start, end))"
    ]
   },
   {
