--- a/examples/maze_example.ipynb
+++ b/examples/maze_example.ipynb
@@ -16,13 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the package and helpers\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "# Ensure project root is on sys.path for imports\n",
-    "repo_root = Path('..').resolve()\n",
-    "sys.path.insert(0, str(repo_root))\n",
-    "from src.squared_maze import generate_maze, astar, grid_to_ascii, grid_to_json, save_images, find_valid_cell, make_unsolvable, make_multiple_solutions\n",
+    "# Import the package \n",
+    "from squared_maze import generate_maze, astar, grid_to_ascii, grid_to_json, save_images, find_valid_cell, make_unsolvable, make_multiple_solutions\n",
     "print('Imports OK')"
    ]
   },
@@ -41,7 +36,7 @@
     "path = astar(grid, start, end)\n",
     "print('Path found:', path is not None)\n",
     "print('ASCII representation:')\n",
-    "print(grid_to_ascii(grid, path, start, end, start_sym='@', end_sym='#', path_sym='*', walkable_sym='.', include_header=True, include_index=True))"
+    "print(grid_to_ascii(grid, path, start, end, start_sym='S', end_sym='E', path_sym='*', walkable_sym='.', wall_sym=\"#\", include_header=True, include_index=True))"
    ]
   },
   {
